--- a/unchained/templates/base_layout.html
+++ b/unchained/templates/base_layout.html
@@ -1,14 +1,41 @@
+{% load static from staticfiles %}
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
   </head>
   <body>
+    <header class="wrapper">
+      <h1><a href="{% url 'articles:list' %}">List Articles</a></h1>
+      <!--<h1><a href="{% url 'articles:create' %}">Create Article</a><h1>-->
+      <nav>
+        <ul>
+          {% if user.is_authenticated %}
+          <li>
+            <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
+              {% csrf_token %}
+              <button type="submit">Logout</button>
+            </form>
+          </li>
+          <li>
+            <a href="{% url 'articles:create' %}" class="highlight">New Article</a>
+          </li>
+          {% else %}
+          <li>
+            <a href="{% url 'accounts:login' %}">Login</a>
+            <a href="{% url 'accounts:signup' %}">Signup</a>
+          </li>
+          {% endif %}
+        </ul>
+      </nav>
+    </header>
     <div class="wrapper">
-      <h1><a href="{% url 'articles:list' %}">Go to articles!</a><h1>
-      {% block content %}
-      {% endblock %}
+        {% block content %}
+        {% endblock %}
     </div>
+
   </body>
 </html>
